Fix loading spinner on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,10 @@ body {
     left: 100px;
     width: 0;
     height: 0;
-    opacity: 1;
+    opacity: 0;
+  }
+  1% {
+      opacity: 1;
   }
   100% {
     top: -1px;
